# tossinvest-rust

./: .gitignore  Cargo.toml  DESIGN.md  NOTICE  README.md  deny.toml
.docs/: overview.md
.github/workflows/: ci.yml
crates/tossinvest/: Cargo.toml  README.md
crates/tossinvest-model/: Cargo.toml  README.md
crates/tossinvest-model/src/: account.rs  enum_macro.rs  enums.rs  envelope.rs  error.rs  lib.rs  market_data.rs  market_info.rs  newtype.rs  scalar.rs  stock.rs  time.rs
crates/tossinvest-model/src/order/: mod.rs  request.rs  response.rs  status.rs
crates/tossinvest-model/tests/: foundation.rs  golden.rs  requests.rs
crates/tossinvest-rate/: Cargo.toml  README.md
crates/tossinvest-rate/src/: dynamic.rs  lib.rs
crates/tossinvest-rate/tests/: burst_on_decrease.rs
crates/tossinvest-state/: Cargo.toml  README.md
crates/tossinvest-state/src/: lib.rs  runtime.rs
crates/tossinvest-state/src/core/: event.rs  mod.rs  state.rs  view.rs
crates/tossinvest-state/tests/: projection.rs  runtime.rs
crates/tossinvest/examples/: portfolio.rs
crates/tossinvest/src/: api.rs  auth.rs  client.rs  config.rs  error.rs  lib.rs  transport.rs
crates/tossinvest/tests/: integration.rs  ratelimit.rs
scripts/: publish-reserve.sh
