[package]
name = "tossinvest-rate"
description = "Per-endpoint-group rate-limiting policy (TPS table + peak-window schedule) for the Toss Securities Open API. Part of the `tossinvest` crate family."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
governor.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
arc-swap.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
